--- a/packages/ui-library/src/css/help.scss
+++ b/packages/ui-library/src/css/help.scss
@@ -30,7 +30,7 @@
 
     display: inline-block;
     background: transparent;
-    line-height: 1em;
+    line-height: 14px;
 
     // overrides for the default react-tooltip styling
     .__react_component_tooltip {
