UIP-1331 : change default modal bg color to white - only gray for wizards
Change-Id: I42496eb26f2d78f6dc316f04e9f767c70b476f67

--- a/packages/ui-library/src/css/modals.scss
+++ b/packages/ui-library/src/css/modals.scss
@@ -33,7 +33,7 @@
             width: 100%;
         }
     }
-  
+
     .modal-content {
         display: none;
         position: relative;
@@ -106,7 +106,7 @@
         padding: 25px;
         font-weight: normal;
         box-sizing: border-box;
-        background-color: $color-elderly;
+        background-color: $color-white;
         overflow-x: visible;
         overflow-y: auto;
         max-height: calc(100% - #{2 * $min-bottom});
@@ -136,6 +136,11 @@
             background: transparent;
             padding: 0;
             border: none;
+        }
+    }
+    &.wizard-modal {
+        .modal-body {
+            background-color: $color-elderly;
         }
     }
     &.maximize {
