UIP-1273 --> Create yellow Row Tooltip state (V2 CRUD)
Change-Id: I09f5fe717344d7aa2c11c2be8ae6a4648b77e090

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1236,6 +1236,7 @@ input[type=file] {
         vertical-align: middle;
         box-sizing: border-box;
         border: 1px solid $color-stratus;
+        cursor: pointer;
 
         @include border-radius($toggle-border-radius);
         @include transition(all $toggle-time);
@@ -1263,6 +1264,12 @@ input[type=file] {
             &:after {
                 left: $toggle-width - $toggle-diameter - 1;
             }
+        }
+    }
+    &.locked:not(.selected) {
+        .toggle {
+            background-color: $color-warning-icon-yellow;
+            border-color: $color-warning-icon-yellow;
         }
     }
     &.small {
