UIP-1272 --> Create Password Requirements CSS (V2 CRUD)
Change-Id: Ica55aab9947dfe24a668d2c1672be5c8a38be9df

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2209,6 +2209,42 @@ input[type=file] {
     }
 }
 
+// password requirements indicators
+.validation-messages {
+    padding: 10px 0;
+    display: none;
+    &.show {
+        display: block;
+    }
+    .message {
+        padding: 3px 0;
+    }
+    .icon-fail,
+    .icon-success {
+        margin-right: 5px;
+        padding: 3px;
+        display: inline-block;
+        font-size: 6px;
+        height: 7px;
+        width: 7px;
+        line-height: 1em;
+        text-align: center;
+        vertical-align: text-top;
+        @include border-radius(6px);
+    }
+    .icon-fail {
+        color: $color-white;
+        background-color: $color-critical-red;
+        font-weight: 600;
+        &:before {
+            content: "X";
+        }
+    }
+    .icon-success {
+        color: $color-white;
+        background-color: $color-success;
+    }
+}
 
 
 // MISC SUPPORTING STYLES --------------------------------------------------------------------------
