UIP-1332 : create new alphabet/index navigation component for row results
Change-Id: I0317eaed7e07574b06d08b86da2f1759f78f4c97

--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -437,6 +437,10 @@
         font-weight: bold;
         text-align: center;
         color: $color-midnight;
+
+        &:empty {
+            margin: 0;
+        }
     }
 }
 
