--- a/packages/ui-library/src/css/status-indicators.scss
+++ b/packages/ui-library/src/css/status-indicators.scss
@@ -4,7 +4,7 @@
     height: $size;
     width: $size;
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
     margin-left: 10px;
     box-sizing: border-box;
 
