--- a/packages/ui-library/src/css/ui-library.scss
+++ b/packages/ui-library/src/css/ui-library.scss
@@ -29,6 +29,7 @@
 @import 'progress-indicators';
 @import 'reports';
 @import 'result-sets';
+@import 'row-index-nav';
 @import 'row-selector';
 @import 'settings-sections';
 @import 'status-indicators';
