UIP-1342 : add new row results ordering control per jFal
Change-Id: I237c86e871b7c38666ef740c224c5ce0e4dd83c6

--- a/packages/ui-library/src/css/details-tooltip.scss
+++ b/packages/ui-library/src/css/details-tooltip.scss
@@ -247,10 +247,9 @@
             margin-bottom: 20px;
         }
     }
-    &.input-selection-list-tooltip {
+    &.input-selection-list-tooltip, &.link-dropdown-list {
         .details-content {
             .details-content-inner {
-                width: 200px;
                 border-color: $color-timberwolf;
 
                 .details-body {
@@ -264,6 +263,13 @@
                 .input-selection-list {
                     border: none;
                 }
+            }
+        }
+    }
+    &.input-selection-list-tooltip {
+        .details-content {
+            .details-content-inner {
+                width: 200px;
             }
         }
         // filter bar
@@ -310,6 +316,13 @@
                 .details-content-inner {
                     width: 220px;
                 }
+            }
+        }
+    }
+    &.link-dropdown-list {
+        .details-content {
+            .details-content-inner {
+                width: 200px;
             }
         }
     }
