UIP-1339 UIP-1340 fix bad "no-results" styles add/fix incomplete/bad "data-title" styles add missing "data-hr" style
Change-Id: I29667c99610a14be24648610d4fbbc0c22112e19

--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -1,20 +1,12 @@
 .no-results {
-    margin-top: 30px;
-    line-height: 40px;
-    padding-top: 25px;
-    border-top: 1px solid $color-input-text;
+    margin: 45px 0 25px 0;
+    font-size: 14px;
+    line-height: 1.3;
+    color: $color-manatee;
     font-family: $font-pn-regular;
-    font-size: 15px;
 
-    &.inline {
-        line-height: 28px;
-    }
-    input[type=button],
     button {
         margin: 0 0 0 30px;
-    }
-    .result-set {
-        display: none;
     }
 }
 
