--- a/packages/ui-library/src/css/data-sets.scss
+++ b/packages/ui-library/src/css/data-sets.scss
@@ -1,6 +1,5 @@
 
 .data {
-
     &.condensed {
         display: inline-block;
         border: 1px solid $color-rabbit-fur;
@@ -126,6 +125,18 @@
             }
         }
     }
+    .data-title {
+        color: $color-blue-grey;
+        text-transform: uppercase;
+        font-family: $font-pn-semibold;
+        padding: 25px 0 15px 0;
+        font-size: 15px;
+        line-height: 1em;
+
+        &:first-of-type {
+            padding-top: 0;
+        }
+    }
     .data-item {
         display: table-row;
         line-height: 1em;
@@ -193,9 +204,8 @@
         &.data-title {
             > label {
                 padding-top: 25px;
-                color: $color-dolphin;
+                color: $color-blue-grey;
                 text-transform: uppercase;
-                margin-bottom: 5px;
                 font-size: 15px;
                 line-height: 1em;
 
@@ -296,6 +306,13 @@
             }
         }
     }
+}
+.data-hr {
+    margin: 15px 0 30px 0;
+    height: 0;
+    border-style: dashed;
+    border-width: 1px 0 0;
+    border-color: $color-rabbit-fur;
 }
 
 .data-set {
