UIP-1350 : add "error" css selector to page messages styling (same as "warning")
Change-Id: I827f08f9857506d45e8f797aa85f05c1693a9969

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -595,7 +595,7 @@ $layout-nav-width-offset: 15px;
             margin: 0 0 0 17px;
             border: none;
         }
-        &.warning {
+        &.warning, &.error {
             background-color: $color-critical-red;
 
             input[type=button] {
