UIP-1288 --> Change SelectionList component so that it accommodates different icons
Change-Id: Iea5556742d22b2637c64d44e7c14c466e0e84f71

--- a/packages/ui-library/src/css/help.scss
+++ b/packages/ui-library/src/css/help.scss
@@ -73,6 +73,13 @@
             @include default-icon-styles;
             padding-left: 2px;
         }
+        img {
+            display: inline-block;
+            height: 14px;
+            width: auto;
+            max-width: 20px;
+            vertical-align: text-bottom;
+        }
     }
     .icon-help {
         text-transform: none;
