update error thrown for props
Change-Id: I68fafe69bed8285ce5d7fb36037a78a5da19d94c

--- a/packages/ui-library/src/demo/css/_markdown.scss
+++ b/packages/ui-library/src/demo/css/_markdown.scss
@@ -105,5 +105,14 @@
     	padding: .1em;
     	border-radius: .3em;
     }
+    details {
+        summary {
+            cursor: pointer;
+            font-size: 16px;
+        }
+        code {
+            background-color: transparent;
+        }
+    }
 
 }
