UIP-1363 --> Add disabled prop/styling/functionality to the i18n phone input
Change-Id: If6d3b6b7390c8bf348b8f6108205f91f8de878ee

--- a/packages/ui-library/src/css/i18n.scss
+++ b/packages/ui-library/src/css/i18n.scss
@@ -67,6 +67,11 @@ $flagsImageExtension: 'png' !default;
 .intl-tel-input {
     margin: 0 20px 20px 0;
 
+    &.disabled {
+        pointer-events: none;
+        cursor: default;
+        @include opacity(0.4);
+    }
     .flag-container {
         // positioned over the top of the input
         position: absolute;
