UIP-1351 --> Add way to specify className to FormDropDownList inside ConditionalFieldset
Change-Id: Id49cf42baea2f2ada038e56a290ab075030f706e

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -854,11 +854,11 @@ input[type=file] {
 }
 
 .input-custom-select {
-    padding: $borderSize; // prevent the highlighted child from overlapping the input border
+    padding: $borderSize;   // prevent the highlighted child from overlapping the input border
     display: inline-block;
     vertical-align: top;
     text-align: left;
-    width: 190px; // default width
+    width: auto;           // set to auto, allow different input widths to be set
 
     &.open {
         z-index: 2; // make sure menu appears above other elements on the page
