UIP-1366 --> Need ability to pass errorMessage through to the FormTextField contained in the FormSearchBox component
Change-Id: Id5bc27382e34ca4e087ffa6506cda6f4ff62fc89

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -142,6 +142,12 @@ label {
                     color: $color-input-text;
                 }
             }
+            &.form-error {
+                a.clear-search {
+                    right: 32px;
+                    @include transition($default-input-transition);
+                }
+            }
             a.clear-search {
                 position: absolute;
                 font-family: $icon-font;
