update delete tooltip
Change-Id: I205ce0b575b4e1693c6ed932cb7b0a21a93114ef

--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -233,22 +233,14 @@
             display: none;
             height: $button-height;
 
+            //changed to <button> from <a>
+            width: $button-width;
+            padding: 0;
+            border: none;
+            border-radius: 0;
+
             &:after {
                 content: '\64';
-            }
-        }
-        .delete-confirm-dialog {
-            position: absolute;
-
-            &.left {
-                right: 23px;
-
-                &.top {
-                    bottom: $button-height;
-                }
-                &.bottom {
-                    bottom: 0;
-                }
             }
         }
         &.expanded {
